# roboresearch

./: .gitignore  .mcp.json  CLAUDE.md  README.md  experiments.md  prepare.py  program.md  pyproject.toml  train.py
mcp/: evaluation.py  registry.py  simulation.py
scripts/: render_demos.py
