[project]
name = "roboresearch"
version = "0.1.0"
description = "Autoresearch for robotics — AI agent iterates on robot manipulation in MuJoCo"
requires-python = ">=3.11"
dependencies = [
    "stable-baselines3",
    "sb3-contrib",
    "mujoco",
    "gymnasium[mujoco]",
    "gymnasium-robotics",
    "torch",
    "mcp",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
